@@ -1,3 +1,8 @@
+2007-05-16 [iwkse]	0.4.0cvs4
+
+	* src/poppler_viewer.c
+			Fix few leaks
+
 2007-05-16 [iwkse]	0.4.0cvs3
 
 	* src/poppler_viewer.h
